fix(material/form-builder): monaco editor not visible

--- a/src/material/form-builder/fb-condition-editor.scss
+++ b/src/material/form-builder/fb-condition-editor.scss
@@ -21,4 +21,8 @@ ajf-condition-editor {
     flex: 0.25 0 auto;
     overflow-y: auto;
   }
+
+  ajf-monaco-editor {
+    min-width: 400px;
+  }
 }
